src/test/deca/context/invalid/created/no-initialization.deca
//Description:
//    test overflow error
//
// Resultats:
//    Error: Overflow during arithmetic operation
// 
// Historique:
//    cree le 01/01/2022
{
    boolean x,y;
    y = !x;
}